unpackaged/main/default/objects/n2de__Holiday__c/n2de__Holiday__c.object-meta.xml
<CustomObject>
    <description>Holidays for region</description>
    <label>Regional Holiday</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regional Holidays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>