unpackaged/main/default/objects/n2de__Holiday__c/fields/n2de__Date__c.field-meta.xml
<CustomField>
    <fullName>n2de__Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>