unpackaged/main/default/objects/n2de__Holiday__c/fields/n2de__End_ui_date__c.field-meta.xml
<CustomField>
    <fullName>n2de__End_ui_date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>