unpackaged/main/default/objects/n2de__Holiday__c/fields/n2de__Holiday_group__c.field-meta.xml
<CustomField>
    <fullName>n2de__Holiday_group__c</fullName>
    <label>Holiday Group</label>
    <referenceTo>n2de__Holiday_group__c</referenceTo>
    <relationshipName>Holidays</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>