unpackaged/main/default/objects/n2de__Holiday__c/fields/n2de__Is_all_day__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_all_day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All day</label>
    <type>Checkbox</type>
</CustomField>