unpackaged/main/default/objects/n2de__Holiday__c/fields/n2de__Start_date__c.field-meta.xml
<CustomField>
    <fullName>n2de__Start_date__c</fullName>
    <label>Start datetime</label>
    <type>DateTime</type>
</CustomField>