unpackaged/main/default/objects/n2de__Holiday__c/fields/n2de__Timezone__c.field-meta.xml
<CustomField>
    <fullName>n2de__Timezone__c</fullName>
    <description>Timezone for this holiday record</description>
    <inlineHelpText>Timezone for this holiday record</inlineHelpText>
    <label>Timezone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>